# merlin-hunt

./: .gitattributes  .gitignore  README.md
demonstration/: Makefile
demonstration/aquickdemo/: .gitignore  Makefile  aquickdemo.ans
demonstration/firstdemotask/: .gitignore  Makefile
demonstration/seconddemotask/: .gitignore  Makefile
deploy/: .gitignore  Dockerfile-nginx  docker-compose.infra.yml  docker-compose.yml  up-infra.sh  up.sh
deploy/nginx/: nginx.conf
domjudge/comparescript/: build  compare.cc
domjudge/runscript/: run
information/: .gitignore  Makefile  information.html  information.tex
make/: contest.mk  has-server.mk  round.mk  server.mk
practice/: Makefile
practice/anoldfriend/: .gitignore  Makefile
practice/practicemakesperfect/: .gitignore  Makefile  practicemakesperfect.ans
practice/simplesum/: .gitignore  Makefile
rounds/: Makefile
rounds/accessgranted/: .gitignore  Makefile  accessgranted.ans
rounds/buggyrelay/: .gitignore  Makefile  buggyrelay.ans
rounds/greatundoing/: .gitignore  Makefile  greatundoing.ans
rounds/hafenrundfahrt/: Makefile
rounds/helloworld/: .gitignore  Makefile  helloworld.ans
rounds/immortalgame/: .gitignore  Makefile  immortalgame.ans
rounds/kleinehafenrundfahrt/: .gitignore  Makefile  kleinehafenrundfahrt.ans
rounds/phoninghome/: Makefile
rounds/phoninghome/client/: CMakeLists.txt
rounds/redacted/: .gitignore  Makefile  redacted.ans
rounds/thegreatundoing/: Makefile
rounds/twistylittlepassages/: .gitignore  Makefile
rounds/zweiwalkueren/: .gitignore  (+2 more)
scripts/: assemble.py
(+153 files in other folders)
